--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       matrix:
         target:
-          - niluv_node
+          - blacklight_node
     steps:
       - name: Checkout
         uses: actions/checkout@v4
