chore: package keeper as docker image

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -20,6 +20,7 @@ jobs:
       matrix:
         target:
           - blacklight_node
+          - keeper
     steps:
       - name: Checkout
         uses: actions/checkout@v4
