--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ license = "MIT"
 [dependencies]
 alloy = { version = "1.1.3", features = ["full"] }
 anyhow = "1.0"
-attestation-verification = { git = "https://github.com/NillionNetwork/nilcc", rev = "a763d97046721e00f732842c4ef398fe8e144623", package = "attestation-verification" }
+async-trait = "0.1"
+attestation-verification = { git = "https://github.com/NillionNetwork/nilcc", rev = "a7545b8b4b620d97399a06619b9fbcb51d6b1f85", package = "attestation-verification" }
 base64 = "0.22"
 clap = { version = "4.5", features = ["derive", "env", "string"] }
 crossterm = "0.29.0"
