--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,52 +1,12 @@
-[package]
-name = "blacklight"
-version = "0.1.0"
-edition = "2021"
-authors = ["Nillion"]
-license = "MIT"
+[workspace]
+resolver = "2"
 
-
-[dependencies]
-alloy = { version = "1.1.3", features = ["full"] }
-anyhow = "1.0"
-async-trait = "0.1"
-attestation-verification = { git = "https://github.com/NillionNetwork/nilcc", rev = "a7545b8b4b620d97399a06619b9fbcb51d6b1f85", package = "attestation-verification" }
-base64 = "0.22"
-clap = { version = "4.5", features = ["derive", "env", "string"] }
-crossterm = "0.29.0"
-dcap-qvl = "0.3.4"
-futures-util = "0.3"
-getrandom = "0.3"
-hex = "0.4"
-rand = "0.9"
-ratatui = "0.29"
-reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-serde_with = { version = "3.16", features = ["hex"] }
-sha2 = "0.10"
-term-table = "1.4"
-tokio = { version = "1.40", features = ["full"] }
-toml = "0.9"
-tracing = "0.1"
-tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
-
-[dev-dependencies]
-httpmock = "0.8"
-tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
-
-[[bin]]
-name = "nilcc_simulator"
-path = "src/bin/nilcc_simulator.rs"
-
-[[bin]]
-name = "blacklight_node"
-path = "src/bin/blacklight_node.rs"
-
-[[bin]]
-name = "monitor"
-path = "src/bin/monitor.rs"
-
-[[bin]]
-name = "keeper"
-path = "src/bin/keeper.rs"
+members = [
+  "blacklight-node",
+  "crates/blacklight-contract-clients",
+  "crates/chain-args",
+  "crates/state-file",
+  "keeper",
+  "monitor",
+  "nilcc-simulator"
+]
