--- a/blacklight-node/Cargo.toml
+++ b/blacklight-node/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "blacklight-node"
-version = "0.1.0"
+version = "0.9.0"
 edition = "2024"
 
 [dependencies]
@@ -12,6 +12,7 @@ dcap-qvl = "0.3.4"
 clap = { version = "4.5", features = ["derive", "env", "string"] }
 futures-util = "0.3"
 reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
+semver = "1.0"
 serde_json = "1.0"
 sha2 = "0.10"
 term-table = "1.4"
