--- a/blacklight-node/Cargo.toml
+++ b/blacklight-node/Cargo.toml
@@ -16,6 +16,7 @@ serde_json = "1.0"
 sha2 = "0.10"
 term-table = "1.4"
 tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "signal"] }
+tokio-util = "0.7"
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
 
