--- a/keeper/Cargo.toml
+++ b/keeper/Cargo.toml
@@ -8,6 +8,9 @@ anyhow = "1.0"
 alloy = { version = "1.1", features = ["contract", "providers"] }
 clap = { version = "4.5", features = ["derive", "env"] }
 futures-util = "0.3"
+opentelemetry = { version = "0.31", default-features = false, features = ["metrics"] }
+opentelemetry-otlp = { version = "0.31", default-features = false, features = ["grpc-tonic", "metrics"] }
+opentelemetry_sdk = { version = "0.31", default-features = false, features = ["rt-tokio", "metrics"] }
 tokio = { version = "1.49", features = ["macros", "rt-multi-thread", "signal"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
